# ferr_os

./: .gitignore  Cargo.toml  build_and_run.bat  build_and_run.sh  package_kernel_and_run.py  readme.md  run_os.bat  run_os.sh  run_tests.ps1  run_tests.sh
.cargo/: config.toml
disk_image/: Cargo.toml
disk_image/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: main.rs
loader/: Cargo.toml
loader/src/: main.rs
shared_lib/: Cargo.toml
shared_lib/src/: addr.rs  allocator.rs  bits.rs  crc.rs  ferr_fs.rs  frame_allocator.rs  interrupts.rs  lib.rs  logger.rs  page_table.rs  screen.rs  serial.rs  serial_logger.rs
shared_lib/src/allocator/: fixed_size_block.rs
src/: addr.rs  allocator.rs  apic.rs  bits.rs  boot_info.rs  chrono.rs  gdt.rs  gpt.rs  ide.rs  idt.rs  interrupts.rs  legacy_memory_region.rs  lib.rs  load_kernel.rs  logger.rs  main.rs  memory.rs  pci.rs  pic.rs  port.rs  serial.rs  shell.rs  xsdt.rs
src/allocator/: fixed_size_block.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  timer.rs
tests/: heap_allocation.rs  interrupts.rs  should_panic.rs  stack_overflow.rs
