[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[workspace]
members = ["disk_image", "loader"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-timeout = 300          # (in seconds)
test-success-exit-code = 33 # (0x10 << 1) | 1

[dependencies.bitflags]
version = "2.4.1"

[dependencies]
bootloader = "0.9.8"
spin = "0.9.8"
