[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[workspace]
members = ["disk_image", "loader", "shared_lib"]

[dependencies]
spin = "0.9.8"
shared_lib = { path = "shared_lib" }
log = { version = "0.4.20", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
bitflags = "2.4.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
crossbeam-queue = { version = "0.3.10", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.38", default-features = false }

[[bin]]
name = "rust_os"
test = false

[lib]
name = "rust_os"
test = false

[[test]]
name = "interrupts"
harness = false

[[test]]
name = "heap_allocation"